@@ -73,7 +73,14 @@ class PoolTest(PoolTestBase):
         self.assert_(connection.cursor() is not None)
         self.assert_(connection is not connection2)
 
-
+    def test_cursor_iterable(self):
+        conn = testing.db.raw_connection()
+        cursor = conn.cursor()
+        cursor.execute("select 1")
+        expected = [(1,)]
+        for row in cursor:
+            eq_(row, expected.pop(0))
+        
     def testthreadlocal_del(self):
         self._do_testthreadlocal(useclose=False)
 
